code/02_enrich-content-REST-and-WS-microservices/fuse-exp-usecase-mod2-soap-backend-service/src/main/fabric8/fuse-exp-karaf-soap-default-route.yml
apiVersion: v1
kind: Route
spec:
  port:
    targetPort: 8181
  to:
    kind: Service
    name: fuse-exp-usecase-mod2-cx
    weight: 100
  wildcardPolicy: None
status: {}
