code/02_enrich-content-REST-and-WS-microservices/fuse-exp-usecase-mod2-soap-backend-service/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fuse-exp-usecase-mod2-cxfws-soap
    weight: 100
  wildcardPolicy: None
status: {}
